feat: standardise lower case letters in payment api responses feat: Remove unneded level paymentOption.config.config
